cmake_minimum_required(VERSION 3.15)
project(nearcore)

set(CMAKE_CXX_STANDARD 14)

add_executable(nearcore
        async-utils/src/lib.rs
        async-utils/Cargo.toml
        chain/chain/src/chain.rs
        chain/chain/src/error.rs
        chain/chain/src/finality.rs
        chain/chain/src/lib.rs
        chain/chain/src/metrics.rs
        chain/chain/src/store.rs
        chain/chain/src/test_utils.rs
        chain/chain/src/types.rs
        chain/chain/src/validate.rs
        chain/chain/tests/challenges.rs
        chain/chain/tests/finality.rs
        chain/chain/tests/simple_chain.rs
        chain/chain/tests/sync_chain.rs
        chain/chain/Cargo.toml
        chain/chunks/src/chunk_cache.rs
        chain/chunks/src/lib.rs
        chain/chunks/src/types.rs
        chain/chunks/Cargo.toml
        chain/client/src/client.rs
        chain/client/src/client_actor.rs
        chain/client/src/info.rs
        chain/client/src/lib.rs
        chain/client/src/metrics.rs
        chain/client/src/sync.rs
        chain/client/src/test_utils.rs
        chain/client/src/types.rs
        chain/client/src/view_client.rs
        chain/client/tests/bug_repros.rs
        chain/client/tests/catching_up.rs
        chain/client/tests/challenges.rs
        chain/client/tests/chunks_management.rs
        chain/client/tests/cross_shard_tx.rs
        chain/client/tests/process_blocks.rs
        chain/client/tests/query_client.rs
        chain/client/Cargo.toml
        chain/epoch_manager/src/lib.rs
        chain/epoch_manager/src/proposals.rs
        chain/epoch_manager/src/reward_calculator.rs
        chain/epoch_manager/src/test_utils.rs
        chain/epoch_manager/src/types.rs
        chain/epoch_manager/tests/finality.rs
        chain/epoch_manager/Cargo.toml
        chain/jsonrpc/client/src/lib.rs
        chain/jsonrpc/client/src/message.rs
        chain/jsonrpc/client/Cargo.toml
        chain/jsonrpc/src/lib.rs
        chain/jsonrpc/src/metrics.rs
        chain/jsonrpc/src/test_utils.rs
        chain/jsonrpc/tests/http_query.rs
        chain/jsonrpc/tests/rpc_query.rs
        chain/jsonrpc/tests/rpc_transactions.rs
        chain/jsonrpc/Cargo.toml
        chain/network/benches/graph.rs
        chain/network/src/codec.rs
        chain/network/src/lib.rs
        chain/network/src/metrics.rs
        chain/network/src/peer.rs
        chain/network/src/peer_manager.rs
        chain/network/src/peer_store.rs
        chain/network/src/rate_counter.rs
        chain/network/src/routing.rs
        chain/network/src/test_utils.rs
        chain/network/src/types.rs
        chain/network/tests/announce_account.rs
        chain/network/tests/cache.rs
        chain/network/tests/peer_handshake.rs
        chain/network/tests/routing.rs
        chain/network/Cargo.toml
        chain/pool/src/lib.rs
        chain/pool/src/types.rs
        chain/pool/Cargo.toml
        chain/telemetry/src/lib.rs
        chain/telemetry/Cargo.toml
        conf/defaults.ini
        conf/generate_dashboard_for_network.sh
        conf/grafana-dashboard.json
        conf/prometheus-near.yml
        core/crypto/src/key_file.rs
        core/crypto/src/lib.rs
        core/crypto/src/signature.rs
        core/crypto/src/signer.rs
        core/crypto/src/test_utils.rs
        core/crypto/src/vrf.rs
        core/crypto/Cargo.toml
        core/metrics/src/lib.rs
        core/metrics/Cargo.toml
        core/primitives/benches/serialization.rs
        core/primitives/src/account.rs
        core/primitives/src/block.rs
        core/primitives/src/challenge.rs
        core/primitives/src/contract.rs
        core/primitives/src/errors.rs
        core/primitives/src/hash.rs
        core/primitives/src/lib.rs
        core/primitives/src/logging.rs
        core/primitives/src/merkle.rs
        core/primitives/src/receipt.rs
        core/primitives/src/serialize.rs
        core/primitives/src/sharding.rs
        core/primitives/src/test_utils.rs
        core/primitives/src/transaction.rs
        core/primitives/src/types.rs
        core/primitives/src/utils.rs
        core/primitives/src/views.rs
        core/primitives/Cargo.toml
        core/store/benches/trie_bench.rs
        core/store/src/trie/insert_delete.rs
        core/store/src/trie/iterator.rs
        core/store/src/trie/mod.rs
        core/store/src/trie/nibble_slice.rs
        core/store/src/trie/state_parts.rs
        core/store/src/trie/trie_storage.rs
        core/store/src/trie/update.rs
        core/store/src/lib.rs
        core/store/src/test_utils.rs
        core/store/Cargo.toml
        docs/logo.svg
        genesis-tools/genesis-csv-to-json/res/test_accounts.csv
        genesis-tools/genesis-csv-to-json/src/csv_parser.rs
        genesis-tools/genesis-csv-to-json/src/csv_to_json_configs.rs
        genesis-tools/genesis-csv-to-json/src/main.rs
        genesis-tools/genesis-csv-to-json/src/serde_with.rs
        genesis-tools/genesis-csv-to-json/Cargo.toml
        genesis-tools/genesis-populate/src/lib.rs
        genesis-tools/genesis-populate/src/main.rs
        genesis-tools/genesis-populate/Cargo.toml
        genesis-tools/keypair-generator/src/main.rs
        genesis-tools/keypair-generator/Cargo.toml
        genesis-tools/README.md
        near/res/testnet.json
        near/src/config.rs
        near/src/lib.rs
        near/src/main.rs
        near/src/runtime.rs
        near/src/shard_tracker.rs
        near/tests/rpc_nodes.rs
        near/tests/run_nodes.rs
        near/tests/stake_nodes.rs
        near/tests/sync_nodes.rs
        near/tests/sync_state_nodes.rs
        near/tests/track_shards.rs
        near/Cargo.toml
        nightly/nightly.py
        nightly/nightly.txt
        nightly/nightly_small.txt
        nightly/requirements.txt
        nightly/run_nightly.sh
        pynear/bin/generate_python_transaction_proto.sh
        pynear/src/near/pynear/protos/__init__.py
        pynear/src/near/pynear/protos/signed_transaction_pb2.py
        pynear/src/near/pynear/test_utils/__init__.py
        pynear/src/near/pynear/test_utils/cli.py
        pynear/src/near/pynear/test_utils/fixtures.py
        pynear/src/near/pynear/__init__.py
        pynear/src/near/pynear/b58.py
        pynear/src/near/pynear/cli.py
        pynear/src/near/pynear/key_store.py
        pynear/src/near/pynear/lib.py
        pynear/src/near/__init__.py
        pynear/tests/integration/__init__.py
        pynear/tests/integration/test_cli.py
        pynear/setup.cfg
        pynear/setup.py
        pytest/lib/__init__.py
        pytest/lib/cluster.py
        pytest/lib/gcloud.py
        pytest/lib/network.py
        pytest/lib/retry.py
        pytest/lib/serializer.py
        pytest/lib/transaction.py
        pytest/lib/utils.py
        pytest/scripts/create_instance_pool.sh
        pytest/scripts/delete_instance_pool.sh
        pytest/tests/sanity/block_production.py
        pytest/tests/sanity/fork_sync.py
        pytest/tests/sanity/one_val.py
        pytest/tests/sanity/remote.py
        pytest/tests/sanity/restart.py
        pytest/tests/sanity/rpc_tx_forwarding.py
        pytest/tests/sanity/skip_epoch.py
        pytest/tests/sanity/staking1.py
        pytest/tests/sanity/staking2.py
        pytest/tests/sanity/staking_repro1.py
        pytest/tests/sanity/staking_repro2.py
        pytest/tests/sanity/state_sync.py
        pytest/tests/sanity/transactions.py
        pytest/tests/stress/network_stress.py
        pytest/tests/stress/stress.py
        pytest/tests/__init__.py
        pytest/__init__.py
        pytest/Pipfile
        pytest/Pipfile.lock
        pytest/requirements.txt
        runtime/near-runtime-fees/src/lib.rs
        runtime/near-runtime-fees/Cargo.toml
        runtime/near-runtime-fees/README.md
        runtime/near-vm-errors/src/lib.rs
        runtime/near-vm-errors/Cargo.toml
        runtime/near-vm-errors/README.md
        runtime/near-vm-logic/src/mocks/mock_external.rs
        runtime/near-vm-logic/src/mocks/mock_memory.rs
        runtime/near-vm-logic/src/mocks/mod.rs
        runtime/near-vm-logic/src/config.rs
        runtime/near-vm-logic/src/context.rs
        runtime/near-vm-logic/src/dependencies.rs
        runtime/near-vm-logic/src/gas_counter.rs
        runtime/near-vm-logic/src/lib.rs
        runtime/near-vm-logic/src/logic.rs
        runtime/near-vm-logic/src/serde_with.rs
        runtime/near-vm-logic/src/types.rs
        runtime/near-vm-logic/tests/fixtures.rs
        runtime/near-vm-logic/tests/helpers.rs
        runtime/near-vm-logic/tests/test_context.rs
        runtime/near-vm-logic/tests/test_iterators.rs
        runtime/near-vm-logic/tests/test_miscs.rs
        runtime/near-vm-logic/tests/test_promises.rs
        runtime/near-vm-logic/tests/test_registers.rs
        runtime/near-vm-logic/tests/test_storage_read_write.rs
        runtime/near-vm-logic/tests/test_storage_usage.rs
        runtime/near-vm-logic/tests/test_view_method.rs
        runtime/near-vm-logic/tests/vm_logic_builder.rs
        runtime/near-vm-logic/Cargo.toml
        runtime/near-vm-logic/README.md
        runtime/near-vm-runner/benches/bench.rs
        runtime/near-vm-runner/src/cache.rs
        runtime/near-vm-runner/src/errors.rs
        runtime/near-vm-runner/src/imports.rs
        runtime/near-vm-runner/src/lib.rs
        runtime/near-vm-runner/src/memory.rs
        runtime/near-vm-runner/src/prepare.rs
        runtime/near-vm-runner/src/runner.rs
        runtime/near-vm-runner/tests/res/test_contract_rs.wasm
        runtime/near-vm-runner/tests/res/test_contract_ts.wasm
        runtime/near-vm-runner/tests/test-contract-rs/src/lib.rs
        runtime/near-vm-runner/tests/test-contract-rs/build.sh
        runtime/near-vm-runner/tests/test-contract-rs/Cargo.lock
        runtime/near-vm-runner/tests/test-contract-rs/Cargo.toml
        runtime/near-vm-runner/tests/test-contract-ts/assembly/index.ts
        runtime/near-vm-runner/tests/test-contract-ts/assembly/tsconfig.json
        runtime/near-vm-runner/tests/test-contract-ts/package-lock.json
        runtime/near-vm-runner/tests/test-contract-ts/package.json
        runtime/near-vm-runner/tests/test-contract-ts/README.md
        runtime/near-vm-runner/tests/test_error_cases.rs
        runtime/near-vm-runner/tests/test_invalid_contracts.rs
        runtime/near-vm-runner/tests/test_rs_contract.rs
        runtime/near-vm-runner/tests/test_ts_contract.rs
        runtime/near-vm-runner/tests/utils.rs
        runtime/near-vm-runner/Cargo.toml
        runtime/near-vm-runner/README.md
        runtime/near-vm-runner-standalone/src/main.rs
        runtime/near-vm-runner-standalone/Cargo.toml
        runtime/near-vm-runner-standalone/README.md
        runtime/runtime/src/actions.rs
        runtime/runtime/src/adapter.rs
        runtime/runtime/src/balance_checker.rs
        runtime/runtime/src/cache.rs
        runtime/runtime/src/config.rs
        runtime/runtime/src/ext.rs
        runtime/runtime/src/lib.rs
        runtime/runtime/src/metrics.rs
        runtime/runtime/src/state_viewer.rs
        runtime/runtime/src/store.rs
        runtime/runtime/tests/runtime_group_tools/mod.rs
        runtime/runtime/tests/runtime_group_tools/random_config.rs
        runtime/runtime/tests/tiny-contract-rs/res/tiny_contract_rs.wasm
        runtime/runtime/tests/tiny-contract-rs/src/lib.rs
        runtime/runtime/tests/tiny-contract-rs/build.sh
        runtime/runtime/tests/tiny-contract-rs/Cargo.lock
        runtime/runtime/tests/tiny-contract-rs/Cargo.toml
        runtime/runtime/tests/test_async_calls.rs
        runtime/runtime/tests/test_evil_contracts.rs
        runtime/runtime/tests/test_regression.rs
        runtime/runtime/Cargo.toml
        runtime/runtime-params-estimator/src/cases.rs
        runtime/runtime-params-estimator/src/ext_costs_generator.rs
        runtime/runtime-params-estimator/src/lib.rs
        runtime/runtime-params-estimator/src/main.rs
        runtime/runtime-params-estimator/src/runtime_fees_generator.rs
        runtime/runtime-params-estimator/src/stats.rs
        runtime/runtime-params-estimator/src/testbed.rs
        runtime/runtime-params-estimator/src/testbed_runners.rs
        runtime/runtime-params-estimator/src/wasmer_estimator.rs
        runtime/runtime-params-estimator/test-contract/res/large_contract.wasm
        runtime/runtime-params-estimator/test-contract/res/large_payload
        runtime/runtime-params-estimator/test-contract/res/medium_contract.wasm
        runtime/runtime-params-estimator/test-contract/res/medium_payload
        runtime/runtime-params-estimator/test-contract/res/small_contract.wasm
        runtime/runtime-params-estimator/test-contract/res/small_payload
        runtime/runtime-params-estimator/test-contract/src/lib.rs
        runtime/runtime-params-estimator/test-contract/build.sh
        runtime/runtime-params-estimator/test-contract/Cargo.lock
        runtime/runtime-params-estimator/test-contract/Cargo.toml
        runtime/runtime-params-estimator/Cargo.toml
        runtime/runtime-params-estimator/README.md
        runtime/publish.sh
        scripts/state/migrate-from-0.3.py
        scripts/state/migrate-from-2.7.py
        scripts/build_wasm.sh
        scripts/cleanup_binary.sh
        scripts/coverage.sh
        scripts/create_service.py
        scripts/install_precommit.sh
        scripts/near.service.template
        scripts/nodelib.py
        scripts/run_clippy.sh
        scripts/run_docker.sh
        scripts/setup_hooks.sh
        scripts/start_localnet.py
        scripts/start_staging_testnet.py
        scripts/start_stakewars.py
        scripts/start_testnet.py
        scripts/start_unittest.py
        scripts/stop.py
        scripts/tag_release.sh
        scripts/test_nearlib.sh
        scripts/upload_release.sh
        scripts/waitonserver.sh
        test-utils/loadtester/src/main.rs
        test-utils/loadtester/src/remote_node.rs
        test-utils/loadtester/src/sampler.rs
        test-utils/loadtester/src/stats.rs
        test-utils/loadtester/src/transactions_executor.rs
        test-utils/loadtester/src/transactions_generator.rs
        test-utils/loadtester/Cargo.toml
        test-utils/loadtester/README.md
        test-utils/state-viewer/src/main.rs
        test-utils/state-viewer/Cargo.toml
        test-utils/testlib/src/node/mod.rs
        test-utils/testlib/src/node/process_node.rs
        test-utils/testlib/src/node/runtime_node.rs
        test-utils/testlib/src/node/thread_node.rs
        test-utils/testlib/src/user/mod.rs
        test-utils/testlib/src/user/rpc_user.rs
        test-utils/testlib/src/user/runtime_user.rs
        test-utils/testlib/src/actix_utils.rs
        test-utils/testlib/src/fees_utils.rs
        test-utils/testlib/src/lib.rs
        test-utils/testlib/src/run_nodes.rs
        test-utils/testlib/src/runtime_utils.rs
        test-utils/testlib/src/standard_test_cases.rs
        test-utils/testlib/src/test_helpers.rs
        test-utils/testlib/Cargo.toml
        tests/add.wasm
        tests/hello.wasm
        tests/singlepass_crash.wasm
        tests/test_cases_runtime.rs
        tests/test_cases_testnet_rpc.rs
        tests/test_catchup.rs
        tests/test_errors.rs
        tests/test_rejoin.rs
        tests/test_simple.rs
        tests/test_tps_regression.rs
        ATTRIBUTIONS.md
        Cargo.lock
        Cargo.toml
        CODEOWNERS
        Dockerfile
        LICENSE
        Makefile
        METRICS.md
        package-lock.json
        README.md
        rust-toolchain
        rustfmt.toml)
