[workspace]
members = [
    "chain/chain",
    "chain/chunks",
    "chain/client",
    "chain/client-primitives",
    "chain/epoch-manager",
    "chain/indexer",
    "chain/indexer-primitives",
    "chain/jsonrpc",
    "chain/jsonrpc-adversarial-primitives",
    "chain/jsonrpc-primitives",
    "chain/jsonrpc/client",
    "chain/jsonrpc/fuzz",
    "chain/jsonrpc/jsonrpc-tests",
    "chain/network",
    "chain/pool",
    "chain/rosetta-rpc",
    "chain/telemetry",
    "core/account-id",
    "core/account-id/fuzz",
    "core/chain-configs",
    "core/crypto",
    "core/o11y",
    "core/primitives",
    "core/primitives-core",
    "core/store",
    "genesis-tools/genesis-csv-to-json",
    "genesis-tools/genesis-populate",
    "genesis-tools/keypair-generator",
    "integration-tests",
    "nearcore",
    "neard",
    "runtime/near-vm-logic",
    "runtime/near-vm-runner",
    "runtime/near-vm-runner/fuzz",
    "runtime/runtime",
    "runtime/runtime-params-estimator",
    "runtime/runtime-params-estimator/estimator-warehouse",
    "test-utils/actix-test-utils",
    "test-utils/runtime-tester",
    "test-utils/runtime-tester/fuzz",
    "test-utils/store-validator",
    "test-utils/testlib",
    "tools/chainsync-loadtest",
    "tools/delay-detector",
    "tools/indexer/example",
    "tools/mock-node",
    "tools/restaked",
    "tools/rpctypegen/core",
    "tools/rpctypegen/macro",
    "tools/state-viewer",
    "tools/storage-usage-delta-calculator",
    "tools/themis",
    "utils/mainnet-res",
    "utils/near-cache",
]

[workspace.metadata.workspaces]
version = "0.15.0"
exclude = [ "neard" ]

[workspace.dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-http = "3.0.4"
actix-rt = "2"
actix-web = "4.0.1"
ansi_term = "0.12"
anyhow = "1.0.62"
arbitrary = { version = "1", features = ["derive"] }
arc-swap = "1.5"
arrayref = "0.3"
assert_matches = "1.5.0"
async-recursion = "0.3.2"
atty = "0.2"
awc = { version = "3", features = ["openssl"] }
backtrace = "0.3.64"
base64 = "0.13"
bencher = "0.1.5"
bitflags = "1.2"
blake2 = "0.9.1"
bn = { package = "zeropool-bn", version = "0.5.11" }
bolero = "0.6.2"
borsh = { version = "0.9", features = ["rc"] }
bs58 = "0.4"
byteorder = "1.3"
bytes = "1"
bytesize = { version = "1.1", features = ["serde"] }
c2-chacha = "0.3"
cargo_metadata = "0.14.1"
cfg-if = "1"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.6", features = ["derive", "env"] }
conqueue = "0.4.0"
cpu-time = "1.0"
criterion = { version = "0.3.5", default_features = false, features = ["html_reports", "cargo_bench_support"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
csv = "1.1.1"
curve25519-dalek = "3"
deepsize = { version = "0.2.0", features = ["chrono"] }
derive_more = "0.99.9"
dirs = "3"
easy-ext = "0.2"
ed25519-dalek = "1"
elastic-array = "0.11"
enum-map = "2.1.0"
expect-test = "1.3.0"
flate2 = "1.0.22"
fs2 = "0.4"
futures = "0.3.5"
futures-util = "0.3"
hex = { version = "0.4.2", features = ["serde"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
im = "15"
indicatif = { version = "0.15.0", features = ["with_rayon"] }
insta = "1.14.0"
itertools = "0.10.0"
itoa = "1.0"
libc = "0.2.81"
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
log = "0.4"
loupe = "0.1"
lru = "0.7.2"
memoffset = "0.6"
near-rust-allocator-proxy = "0.4"
near-sdk = "3.1.0"
nix = "0.15.0"
num-bigint = "0.3"
num-rational = { version = "0.3.1", features = ["serde"] }
num-traits = "0.2.12"
num_cpus = "1.11"
once_cell = "1.13.1"
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.4"
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = "0.10.0"
opentelemetry-semantic-conventions = "0.9.0"
paperclip = { version = "0.7.0", features = ["actix4"] }
parity-wasm = { version = "0.42", default-features = false }
parity-wasm_41 = { package = "parity-wasm", version = "0.41" }
parking_lot = "0.12.1"
pretty_assertions = "1.2"
primitive-types = { version = "0.10", default-features = false }
prometheus = "0.13.1"
protobuf = "3.0.1"
protobuf-codegen = "3.0.1"
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_hc = "0.3.1"
rand_xorshift = "0.3"
rayon = "1.5"
redis = "0.21.5"
reed-solomon-erasure = "4"
reqwest = { version = "0.11.0", features = ["blocking"] }
ripemd = "0.1.1"
rlimit = "0.7"
rocksdb = { version = "0.18.0", default-features = false, features = ["snappy", "lz4", "zstd", "zlib", "jemalloc"] }
rusqlite = {version = "0.27.0", features = ["bundled", "chrono", "functions"] }
secp256k1 = { version = "0.24", features = ["recovery", "rand-std"] }
semver = "1.0.4"
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
serde_ignored = "0.1"
serde_json = "1.0.68"
serde_repr = "0.1.8"
sha2 = "0.10"
sha3 = "0.10"
shell-escape = "0.1.5"
smart-default = "0.6"
smartstring = "1.0.1"
strum = { version = "0.24", features = ["derive"] }
subtle = "2.2"
syn = { version = "1.0.54", features = ["extra-traits", "full"] }
sysinfo = "0.24.5"
tar = "0.4.38"
tempfile = "3.3"
thiserror = "1.0.30"
tikv-jemallocator = "0.4.0"
time = "0.3.9"
tokio = { version = "1.16.1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.2", features = ["net"] }
tokio-util = { version = "0.7.1", features = ["codec", "io"] }
toml = "0.5.8"
tracing = { version = "0.1.36", features = ["std"] }
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.17.0"
tracing-span-tree = "0.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "registry", "std"] }
validator = "0.12"
walrus = "0.18.0"
wasm-encoder = "0.11.0"
wasm-smith = "0.10"
wasmparser = "0.78"
wasmprinter = "0.2"
wasmtime = { version = "0.37.0", default-features = false, features = ["cranelift", "wasm-backtrace"] }
wat = "1.0.40"
xshell = "0.2.1"
xz2 = "0.1.6"

[patch.crates-io]

# Note that "bench" profile inherits from "release" profile and
# "test" profile inherits from "dev" profile.
# https://doc.rust-lang.org/cargo/reference/profiles.html#test

[profile.release]
overflow-checks = true
panic = 'abort'

[profile.dev]
panic = 'abort'

# Compile some dependencies with optimizations to speed up tests.
[profile.dev.package.hex]
opt-level = 3
[profile.dev.package.rand]
opt-level = 3
[profile.dev.package.bs58]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3

[workspace.package]
edition = "2021"
authors = ["Near Inc <hello@nearprotocol.com>"]
rust-version = "1.64.0"
