[workspace]
members = [
    "chain/chain",
    "chain/chunks",
    "chain/client",
    "chain/client-primitives",
    "chain/epoch-manager",
    "chain/indexer",
    "chain/indexer-primitives",
    "chain/jsonrpc",
    "chain/jsonrpc-adversarial-primitives",
    "chain/jsonrpc-primitives",
    "chain/jsonrpc/client",
    "chain/jsonrpc/fuzz",
    "chain/jsonrpc/jsonrpc-tests",
    "chain/network",
    "chain/pool",
    "chain/rosetta-rpc",
    "chain/telemetry",
    "core/async",
    "core/account-id",
    "core/account-id/fuzz",
    "core/chain-configs",
    "core/crypto",
    "core/dyn-configs",
    "core/o11y",
    "core/primitives",
    "core/primitives-core",
    "core/store",
    "genesis-tools/genesis-csv-to-json",
    "genesis-tools/genesis-populate",
    "genesis-tools/keypair-generator",
    "integration-tests",
    "nearcore",
    "neard",
    "runtime/near-vm/lib/api",
    "runtime/near-vm/lib/compiler",
    "runtime/near-vm/lib/compiler-singlepass",
    "runtime/near-vm/lib/engine",
    "runtime/near-vm/lib/engine-universal",
    "runtime/near-vm/lib/vm",
    "runtime/near-vm/lib/types",
    "runtime/near-vm/tests/lib/wast",
    "runtime/near-vm/tests/lib/compiler-test-derive",
    "runtime/near-vm-logic",
    "runtime/near-vm-runner",
    "runtime/near-vm-runner/fuzz",
    "runtime/runtime",
    "runtime/runtime-params-estimator",
    "runtime/runtime-params-estimator/estimator-warehouse",
    "test-utils/actix-test-utils",
    "test-utils/runtime-tester",
    "test-utils/runtime-tester/fuzz",
    "test-utils/store-validator",
    "test-utils/testlib",
    "tools/chainsync-loadtest",
    "tools/delay-detector",
    "tools/indexer/example",
    "tools/mirror",
    "tools/mock-node",
    "tools/ping",
    "tools/restaked",
    "tools/rpctypegen/core",
    "tools/rpctypegen/macro",
    "tools/speedy_sync",
    "tools/state-parts",
    "tools/state-viewer",
    "tools/storage-usage-delta-calculator",
    "tools/themis",
    "tools/undo-block",
    "utils/config",
    "utils/fmt",
    "utils/mainnet-res",
    "utils/near-cache",
    "utils/stdx",
]

[workspace.metadata.workspaces]
version = "0.16.1"
exclude = [ "neard" ]

[workspace.dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-http = "3.0.4"
actix-rt = "2"
actix-web = "4.0.1"
ansi_term = "0.12"
anyhow = "1.0.62"
arbitrary = { version = "1.2.3", features = ["derive"] }
arc-swap = "1.5"
assert_matches = "1.5.0"
async-recursion = "1.0.4"
async-trait = "0.1.58"
atty = "0.2"
awc = { version = "3", features = ["openssl"] }
backtrace = "0.3"
base64 = "0.13"
bencher = "0.1.5"
bitflags = "1.2"
blake2 = "0.9.1"
bn = { package = "zeropool-bn", version = "0.5.11" }
bolero = "0.8.0"
borsh = { version = "0.10.2", features = ["rc"] }
bs58 = "0.4"
bytes = "1"
bytesize = { version = "1.1", features = ["serde"] }
c2-chacha = "0.3"
cargo_metadata = "0.14.1"
cc = "1.0"
cfg-if = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.2.0", features = ["derive", "env", "string"] }
conqueue = "0.4.0"
cpu-time = "1.0"
criterion = { version = "0.3.5", default_features = false, features = ["html_reports", "cargo_bench_support"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
csv = "1.2.1"
curve25519-dalek = "3"
delay-detector = { path = "tools/delay-detector" }
derive-enum-from-into = "0.1.1"
derive_more = "0.99.9"
dirs = "4"
dynasm = "1.0"
dynasmrt = "1.0"
easy-ext = "0.2"
ed25519-dalek = "1"
elastic-array = "0.11"
enum-map = "2.1.0"
enumset = "1.0"
expect-test = "1.3.0"
finite-wasm = "0.3.0"
flate2 = "1.0.22"
fs2 = "0.4"
futures = "0.3.5"
futures-util = "0.3"
genesis-populate = { path = "genesis-tools/genesis-populate"}
hashbrown = "0.11"
hex = { version = "0.4.2", features = ["serde"] }
hex-literal = "0.2"
hkdf = "0.12.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
im = "15"
indexmap = "1.6"
indicatif = { version = "0.15.0", features = ["with_rayon"] }
insta = { version = "1.26.0", features = ["json", "yaml"] }
integration-tests = { path = "integration-tests" }
itertools = "0.10.0"
itoa = "1.0"
json_comments = "0.2.1"
lazy_static = "1.4"
leb128 = "0.2"
libc = "0.2.81"
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
log = "0.4"
loupe = "0.1"
lru = "0.7.2"
memmap2 = "0.5"
memoffset = "0.6"
more-asserts = "0.2"
near-account-id = { path = "core/account-id", features = [ "internal_unstable" ] }
near-actix-test-utils = { path = "test-utils/actix-test-utils" }
near-amend-genesis = { path = "tools/amend-genesis" }
near-async = { path = "core/async" }
near-cache = { path = "utils/near-cache" }
near-chain = { path = "chain/chain" }
near-chain-configs = { path = "core/chain-configs" }
near-chain-primitives = { path = "chain/chain-primitives" }
near-chunks = { path = "chain/chunks" }
near-chunks-primitives = { path = "chain/chunks-primitives" }
near-client = { path = "chain/client" }
near-client-primitives = {path = "chain/client-primitives"}
near-cold-store-tool = { path = "tools/cold-store", package = "cold-store-tool" }
near-config-utils = { path = "utils/config" }
near-crypto = { path = "core/crypto" }
near-dyn-configs = { path = "core/dyn-configs" }
near-epoch-manager = { path = "chain/epoch-manager" }
near-flat-storage = { path = "tools/flat-storage" }
near-fmt = { path = "utils/fmt" }
near-indexer = { path = "chain/indexer" }
near-indexer-primitives = { path = "chain/indexer-primitives" }
near-jsonrpc = { path = "chain/jsonrpc" }
near-jsonrpc-adversarial-primitives = { path = "chain/jsonrpc-adversarial-primitives" }
near-jsonrpc-client = { path = "chain/jsonrpc/client" }
near-jsonrpc-primitives = { path = "chain/jsonrpc-primitives", features = ["full"] }
near-jsonrpc-tests = { path = "chain/jsonrpc/jsonrpc-tests" }
near-mainnet-res = { path = "utils/mainnet-res" }
near-mirror = { path = "tools/mirror" }
near-network = { path = "chain/network" }
near-o11y = { path = "core/o11y" }
near-performance-metrics = { path = "utils/near-performance-metrics" }
near-performance-metrics-macros = { path = "utils/near-performance-metrics-macros" }
near-ping = { path = "tools/ping" }
near-pool = { path = "chain/pool" }
near-primitives = { path = "core/primitives" }
near-primitives-core = { path = "core/primitives-core" }
near-rosetta-rpc = { path = "chain/rosetta-rpc" }
near-rpc-error-core = { path = "tools/rpctypegen/core" }
near-rpc-error-macro = { path = "tools/rpctypegen/macro" }
near-stable-hasher = { path = "utils/near-stable-hasher" }
near-state-parts = { path = "tools/state-parts" }
near-state-viewer = { path = "tools/state-viewer", package = "state-viewer" }
near-store = { path = "core/store" }
near-telemetry = { path = "chain/telemetry" }
near-test-contracts = { path = "runtime/near-test-contracts" }
near-undo-block = { path = "tools/undo-block" }
near-vm-compiler = { path = "runtime/near-vm/lib/compiler"}
near-vm-compiler-singlepass = { path = "runtime/near-vm/lib/compiler-singlepass" }
near-vm-engine = { path = "runtime/near-vm/lib/engine" }
near-vm-engine-universal = { path = "runtime/near-vm/lib/engine-universal" }
near-vm-errors = { path = "runtime/near-vm-errors" }
near-vm-logic = { path = "runtime/near-vm-logic" }
near-vm-runner = { path = "runtime/near-vm-runner"}
near-vm-types = { path = "runtime/near-vm/lib/types" }
near-vm-vm = { path = "runtime/near-vm/lib/vm" }
nearcore = { path = "nearcore" }
nix = "0.24"
node-runtime = { path = "runtime/runtime" }
num-bigint = "0.3"
num-rational = { version = "0.3.1", features = ["serde"] }
num-traits = "0.2.15"
num_cpus = "1.11"
once_cell = "1.13.1"
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.4"
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = "0.10.0"
opentelemetry-semantic-conventions = "0.9.0"
paperclip = { version = "0.8.0", features = ["actix4"] }
parity-wasm = { version = "0.42", default-features = false }
parity-wasm_41 = { package = "parity-wasm", version = "0.41" }
parking_lot = "0.12.1"
pin-project = "1.0"
prefix-sum-vec = "0.1.2"
pretty_assertions = "1.2"
primitive-types = { version = "0.10", default-features = false }
proc-macro2 = "1"
prometheus = "0.13.1"
protobuf = "3.0.1"
protobuf-codegen = "3.0.1"
pwasm-utils_12 = { package = "pwasm-utils", version = "0.12" }
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.5"
rand_hc = "0.3.1"
rand_xorshift = "0.3"
rayon = "1.5"
redis = "0.23.0"
reed-solomon-erasure = "4"
regex = "1.7.1"
region = "3.0"
reqwest = { version = "0.11.0", features = ["blocking"] }
ripemd = "0.1.1"
rkyv = "0.7.31"
rlimit = "0.7"
rocksdb = { version = "0.19.0", default-features = false, features = ["snappy", "lz4", "zstd", "zlib", "jemalloc"] }
runtime-tester = { path = "test-utils/runtime-tester" }
rust-s3 = { version = "0.32.3", features = ["blocking"] }
rustc-demangle = "0.1"
rusqlite = {version = "0.27.0", features = ["bundled", "chrono", "functions"] }
secp256k1 = { version = "0.27.0", features = ["recovery", "rand-std"] }
semver = "1.0.4"
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }
serde_ignored = "0.1"
serde_json = "1.0.68"
serde_repr = "0.1.8"
serde_yaml = "0.9"
sha2 = "0.10"
sha3 = "0.10"
shell-escape = "0.1.5"
smallvec = "1.6"
smart-default = "0.6"
smartstring = "1.0.1"
strum = { version = "0.24", features = ["derive"] }
stun = "0.4"
subtle = "2.2"
syn = { version = "2.0.4", features = ["extra-traits", "full"] }
sysinfo = "0.24.5"
tar = "0.4.38"
target-lexicon = { version = "0.12.2", default-features = false }
tempfile = "3.3"
testlib = { path = "test-utils/testlib" }
thiserror = "1.0.30"
tikv-jemallocator = "0.5.0"
time = "0.3.9"
tokio = { version = "~1.19", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.2", features = ["net"] }
tokio-util = { version = "0.7.1", features = ["codec", "io"] }
toml = "0.5.8"
tqdm = "0.4.4"
tracing = { version = "0.1.36", features = ["std"] }
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.17.0"
tracing-span-tree = "0.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "registry", "std"] }
trybuild = "1.0.11"
turn = "0.6"
validator = "0.12"
wasm-encoder = "0.11.0"
wasm-smith = "0.10"
wasmer-compiler = { package = "wasmer-compiler-near", version = "=2.4.0" }
wasmer-compiler-singlepass = { package = "wasmer-compiler-singlepass-near", version = "=2.4.0" }
wasmer-engine = { package = "wasmer-engine-near", version = "=2.4.0" }
wasmer-engine-universal = { package = "wasmer-engine-universal-near", version = "=2.4.0", features = ["compiler"] }
wasmer-runtime = { version = "0.18.0", package = "wasmer-runtime-near", features = ["default-backend-singlepass"], default-features = false }
wasmer-runtime-core = { version = "0.18.2", package = "wasmer-runtime-core-near" }
wasmer-types = { package = "wasmer-types-near", version = "=2.4.0" }
wasmer-vm = { package = "wasmer-vm-near", version = "=2.4.0" }
wasmparser = "0.78" # TODO: unify at least the versions of wasmparser we have in our codebase
wasmprinter = "0.2"
wasmtime = { version = "4.0.0", default-features = false, features = ["cranelift"] }
wast = "40.0"
wat = "1.0.40"
webrtc-util = "0.7"
winapi = { version = "0.3", features = ["winbase", "memoryapi", "errhandlingapi", "winnt", "impl-default"] }
xshell = "0.2.1"
xz2 = "0.1.6"

# Polyfill crate introduced in https://github.com/near/nearcore/pull/8087
# Because public crates depend on it, we have to also publish this.
# When changing the workspace version, set this back to a local dependency and
# then update again to the higher published version once we release crates again.
# TODO(#8604): Fix this process.
stdx = { package = "near-stdx", version = "0.16.0" }

[patch.crates-io]

# Note that "bench" profile inherits from "release" profile and
# "test" profile inherits from "dev" profile.
# https://doc.rust-lang.org/cargo/reference/profiles.html#test

[profile.dev]
panic = 'abort'

[profile.release]
overflow-checks = true
panic = 'abort'
lto = "fat"
codegen-units = 1

# A much faster to compile version of `release`.
[profile.quick-release]
inherits = "release"
lto = false
codegen-units = 16


# Compile some dependencies with optimizations to speed up tests.
[profile.dev.package.hex]
opt-level = 3
[profile.dev.package.rand]
opt-level = 3
[profile.dev.package.bs58]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3

[workspace.package]
edition = "2021"
authors = ["Near Inc <hello@nearprotocol.com>"]
rust-version = "1.69.0"
